crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_unclosed_lbrace.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_unclosed_lbrace.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..38,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 0..4,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 0..4,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..4,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 2..3,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 3..3,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 5..14,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 5..14,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 5..14,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 7..14,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 8..11,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: Repr,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 15..23,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 15..23,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 15..23,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 17..22,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 18..21,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: Some(
                                                            DebugText {
                                                                leading: "",
                                                                trailing: "=",
                                                            },
                                                        ),
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 24..37,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 24..37,
                            value: FStringValue {
                                inner: Concatenated(
                                    [
                                        FString(
                                            FString {
                                                range: 24..28,
                                                node_index: AtomicNodeIndex(..),
                                                elements: [
                                                    Expression(
                                                        FStringExpressionElement {
                                                            range: 26..27,
                                                            node_index: AtomicNodeIndex(..),
                                                            expression: Name(
                                                                ExprName {
                                                                    node_index: AtomicNodeIndex(..),
                                                                    range: 27..27,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                            debug_text: None,
                                                            conversion: None,
                                                            format_spec: None,
                                                        },
                                                    ),
                                                ],
                                                flags: FStringFlags {
                                                    quote_style: Double,
                                                    prefix: Regular,
                                                    triple_quoted: false,
                                                },
                                            },
                                        ),
                                        FString(
                                            FString {
                                                range: 29..37,
                                                node_index: AtomicNodeIndex(..),
                                                elements: [
                                                    Expression(
                                                        FStringExpressionElement {
                                                            range: 33..34,
                                                            node_index: AtomicNodeIndex(..),
                                                            expression: Name(
                                                                ExprName {
                                                                    node_index: AtomicNodeIndex(..),
                                                                    range: 34..34,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                            debug_text: None,
                                                            conversion: None,
                                                            format_spec: None,
                                                        },
                                                    ),
                                                ],
                                                flags: FStringFlags {
                                                    quote_style: Double,
                                                    prefix: Regular,
                                                    triple_quoted: true,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"{"
  |    ^ Syntax Error: Expected an expression
2 | f"{foo!r"
3 | f"{foo="
  |


  |
1 | f"{"
  |      Syntax Error: f-string: unterminated string
2 | f"{foo!r"
3 | f"{foo="
  |


  |
1 | f"{"
  |      Syntax Error: f-string: unterminated string
2 | f"{foo!r"
3 | f"{foo="
  |


  |
1 | f"{"
2 | f"{foo!r"
  |        ^^ Syntax Error: missing closing quote in string literal
3 | f"{foo="
4 | f"{"
  |


  |
1 | f"{"
2 | f"{foo!r"
  |           Syntax Error: f-string: unterminated string
3 | f"{foo="
4 | f"{"
  |


  |
1 | f"{"
2 | f"{foo!r"
  |         ^ Syntax Error: f-string: expecting `}`
3 | f"{foo="
4 | f"{"
  |


  |
1 | f"{"
2 | f"{foo!r"
3 | f"{foo="
  | ^^ Syntax Error: f-string: expecting `}`
4 | f"{"
5 | f"""{"""
  |


  |
1 | f"{"
2 | f"{foo!r"
  |           Syntax Error: Expected FStringEnd, found Unknown
3 | f"{foo="
4 | f"{"
  |


  |
1 | f"{"
2 | f"{foo!r"
3 | f"{foo="
  |        ^ Syntax Error: missing closing quote in string literal
4 | f"{"
5 | f"""{"""
  |


  |
1 | f"{"
2 | f"{foo!r"
3 | f"{foo="
  |          Syntax Error: f-string: unterminated string
4 | f"{"
5 | f"""{"""
  |


  |
1 | f"{"
2 | f"{foo!r"
3 | f"{foo="
  |          Syntax Error: f-string: unterminated string
4 | f"{"
5 | f"""{"""
  |


  |
2 | f"{foo!r"
3 | f"{foo="
4 | f"{"
  |    ^ Syntax Error: missing closing quote in string literal
5 | f"""{"""
  |


  |
3 | f"{foo="
4 | f"{"
5 | f"""{"""
  | ^^^^ Syntax Error: Expected FStringEnd, found FStringStart
  |


  |
3 | f"{foo="
4 | f"{"
5 | f"""{"""
  |      ^^^ Syntax Error: Expected an expression
  |


  |
4 | f"{"
5 | f"""{"""
  |


  |
4 | f"{"
5 | f"""{"""
  |
