crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_unclosed_lbrace_in_format_spec.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_unclosed_lbrace_in_format_spec.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..29,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 0..12,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 0..12,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..12,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 2..8,
                                                        node_index: AtomicNodeIndex(..),
                                                        value: "hello ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 8..11,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 9..10,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            FStringFormatSpec {
                                                                range: 11..11,
                                                                node_index: AtomicNodeIndex(..),
                                                                elements: [],
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 13..28,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 13..28,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 13..28,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 15..21,
                                                        node_index: AtomicNodeIndex(..),
                                                        value: "hello ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 21..27,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 22..23,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            FStringFormatSpec {
                                                                range: 24..27,
                                                                node_index: AtomicNodeIndex(..),
                                                                elements: [
                                                                    Literal(
                                                                        FStringLiteralElement {
                                                                            range: 24..27,
                                                                            node_index: AtomicNodeIndex(..),
                                                                            value: ".3f",
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"hello {x:"
  |            ^ Syntax Error: f-string: expecting `}`
2 | f"hello {x:.3f"
  |


  |
1 | f"hello {x:"
2 | f"hello {x:.3f"
  |               ^ Syntax Error: f-string: expecting `}`
  |
